# conan-catch-template

./: README.md
src/: .clang-format  CMakeLists.txt  conanfile.txt  format.sh  main.cpp  tests.cpp
